# Open-GameFi

./: .gitignore  README.md
open-gamefi-module/: README.md  package.json
open-gamefi-module/src/: index.ts  polygon.ts  stellar.ts
polygon-pack/: README.md
polygon-pack/game-example/: README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
polygon-pack/game-example/src/: UserContext.tsx  (+4 more)
polygon-pack/polygon-back/: .env.default  README.md  package-lock.json  package.json
polygon-pack/polygon-wallet/: README.md  package-lock.json
soroban-project/soroban-hello-world/: README.md
stellar-back/: .env.default  README.md  package-lock.json  package.json
stellar-back/lib/: globals.js  index.js  package.json  walletUtils.js
stellar-back/src/: app.config.ts  index.ts  walletUtils.js
stellar-pack/: README.md
stellar-pack/game-example/: README.md  next.config.js  package.json
stellar-pack/soroban-project/soroban-contracts/: Cargo.toml  README.md
stellar-pack/soroban-project/soroban-contracts/contracts/main/: Cargo.toml
stellar-pack/soroban-project/soroban-contracts/contracts/main/src/: lib.rs
stellar-pack/soroban-project/soroban-contracts/contracts/token/test_snapshots/test/: test_burn.1.json
stellar-pack/stellar-back/: .env.default  README.md  package-lock.json  package.json  tsconfig.json
stellar-pack/stellar-backend/: README.md  package-lock.json  package.json
stellar-pack/stellar-wallet/: README.md  package.json
stellar-wallet/src/: App.js  UserContext.js  WalletContext.js  index.js
(+100 files in other folders)
